--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="carta-2">
         <div class="carta-2__primera-parte">
             <div>
-                <h2>Discover the beauty the world</h2>
+                <h2>Discover the beauty around the world</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis at, magni nemo pariatur totam expedita.</p>
                 <button>Get started</button>
             </div>
