--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         </div>
         <div class="carta-2__segunda-parte">
             <div>
-                <div>01</div>
+                <div class="carta-2__numero">01</div>
                 <img src="img/img__carta-2/imagen3.png">
             </div>
             <div>
-                <div>02</div>
+                <div class="carta-2__numero">02</div>
                 <img src="img/img__carta-2/imagen4.png">
             </div>
             <div>
-                <div>03</div>
+                <div class="carta-2__numero">03</div>
                 <img src="img/img__carta-2/imagen5.png">
             </div>
         </div>
@@ -58,10 +58,21 @@
 <!------------------ CARTA 3 ----------------------->
 
     <section class="carta-3">
-
+        <div>
+            <h2>Just that simple</h2>
+            <div class="carta-3__parte">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ex suscipit dignissimos eveniet.</p>
+                <button>Get started</button>
+            </div>
+        </div>
+        <img src="img/img__carta-3/imagen1.png">
     </section>
+
+<!------------------ CARTA 4 ----------------------->
+
     <section class="carta-4">
 
     </section>
+
 </body>
 </html>
