--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div>
             <h2>Just that simple</h2>
             <div class="carta-3__parte">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ex suscipit dignissimos eveniet.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ex suscipit dignissimos eveniet. Ut ex suscipit dignissimos.</p>
                 <button>Get started</button>
             </div>
         </div>
@@ -71,7 +71,24 @@
 <!------------------ CARTA 4 ----------------------->
 
     <section class="carta-4">
-
+        <img src="img/img__carta-4/imagen1.png">
+        <div>
+            <div class="carta-4__primera-parte">
+                <h2>Exploration and inspiration</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis voluptate, quas qui maxime.</p>
+                <button>Explore</button>
+            </div>
+            <div class="carta-4__segunda-parte">
+                <div>
+                    <div>01</div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis voluptate, quas qui maxime.</p>
+                </div>
+                <div>
+                    <div>02</div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis voluptate, quas qui maxime.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
