--- a/index.html
+++ b/index.html
@@ -91,5 +91,28 @@
         </div>
     </section>
 
+<!------------------ CARTA 5 ----------------------->
+
+    <section class="carta-5">
+        <h2>Projects and practice</h2>
+        <div>
+            <div>
+                <div>01</div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti iste quisquam officiis aspernatur possimus numquam, necessitatibus ratione!</p>
+                <img src="img/img__carta-5/imagen1.png">
+            </div>
+            <div>
+                <div>02</div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti iste quisquam officiis aspernatur possimus numquam, necessitatibus ratione!</p>
+                <img src="img/img__carta-5/imagen2.png">
+            </div>
+            <div>
+                <div>03</div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti iste quisquam officiis aspernatur possimus numquam, necessitatibus ratione!</p>
+                <img src="img/img__carta-5/imagen3.png">
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
