--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECTE FINAL HTML/CSS</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
 </head>
 <body>
     <h1>PROJECTE FINAL HTML/CSS</h1>
@@ -13,7 +14,7 @@
 
     <section class="carta-1">
         <h2>Discover the beauty around the world</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet iure laudantium labore vitae ipsam. Delectus harum, repudiandae laboriosam accusamus architecto culpa fugiat vitae.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
         <button>Explore</button>
         <div>
             <img src="img/img__carta-1/imagen1.png">
@@ -75,7 +76,7 @@
         <div>
             <div class="carta-4__primera-parte">
                 <h2>Exploration and inspiration</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis voluptate, quas qui maxime.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
                 <button>Explore</button>
             </div>
             <div class="carta-4__segunda-parte">
@@ -98,21 +99,23 @@
         <div>
             <div>
                 <div>01</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti iste quisquam officiis aspernatur possimus numquam, necessitatibus ratione!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
                 <img src="img/img__carta-5/imagen1.png">
             </div>
             <div>
                 <div>02</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti iste quisquam officiis aspernatur possimus numquam, necessitatibus ratione!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
                 <img src="img/img__carta-5/imagen2.png">
             </div>
             <div>
                 <div>03</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti iste quisquam officiis aspernatur possimus numquam, necessitatibus ratione!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
                 <img src="img/img__carta-5/imagen3.png">
             </div>
         </div>
     </section>
+
+<!------------------ CARTA 6 ----------------------->
 
 </body>
 </html>
