--- a/index.html
+++ b/index.html
@@ -117,5 +117,27 @@
 
 <!------------------ CARTA 6 ----------------------->
 
+    <section class="carta-6">
+        <div>
+            <div class="circle">
+                
+            </div>              
+            <div>
+                <h2>THE eWatch with the newest microchip technology</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
+                <div>
+                    <button>Order now</button>
+                    <button>Explore more</button>
+                </div>
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <div>
+
+        </div>
+    </section>
+
 </body>
 </html>
