--- a/index.html
+++ b/index.html
@@ -120,7 +120,35 @@
     <section class="carta-6">
         <div>
             <div class="circle">
-                
+                <span>,</span>
+                <span>t</span>
+                <span>e</span>
+                <span>m</span>
+                <span>a</span>
+                <span> </span>
+                <span>t</span>
+                <span>i</span>
+                <span>s</span>
+                <span> </span>
+                <span>r</span>
+                <span>o</span>
+                <span>l</span>
+                <span>o</span>
+                <span>d</span>
+                <span> </span>
+                <span>n</span>
+                <span>d</span>
+                <span>r</span>
+                <span>m</span>
+                <span>e</span>
+                <span>r</span>
+                <span>o</span>
+                <span>l</span>
+                <span>s</span>
+                <span>n</span>
+                <span>o</span>
+                <span>c</span>
+                <span> </span>
             </div>              
             <div>
                 <h2>THE eWatch with the newest microchip technology</h2>
