--- a/index.html
+++ b/index.html
@@ -8,164 +8,54 @@
     <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
 </head>
 <body>
-    <h1>PROJECTE FINAL HTML/CSS</h1>
-
-<!--------------------- CARTA 1 ----------------------->
-
-    <section class="carta-1">
-        <h2>Discover the beauty around the world</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
-        <button>Explore</button>
+    <nav>
+        <h1>PROJECTE FINAL HTML/CSS</h1>
+        <p>Alumno: Javier López Chacón</p>
+    </nav>
+    <section class="cartas">
         <div>
-            <img src="img/img__carta-1/imagen1.png">
-            <img src="img/img__carta-1/imagen2.png">
-            <img src="img/img__carta-1/imagen3.png">
-            <img src="img/img__carta-1/imagen4.png">
-            <img src="img/img__carta-1/imagen5.png">
-            <img src="img/img__carta-1/imagen6.png">
-            <img src="img/img__carta-1/imagen7.png">
-            <img src="img/img__carta-1/imagen8.png">
-        </div>
-    </section>
-
-<!------------------ CARTA 2 ----------------------->
-
-    <section class="carta-2">
-        <div class="carta-2__primera-parte">
-            <div>
-                <h2>Discover the beauty around the world</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis at, magni nemo pariatur totam expedita.</p>
-                <button>Get started</button>
-            </div>
-            <img src="img/img__carta-2/imagen1.png">
-            <img src="img/img__carta-2/imagen2.png">
-        </div>
-        <div class="carta-2__segunda-parte">
-            <div>
-                <div class="carta-2__numero">01</div>
-                <img src="img/img__carta-2/imagen3.png">
-            </div>
-            <div>
-                <div class="carta-2__numero">02</div>
-                <img src="img/img__carta-2/imagen4.png">
-            </div>
-            <div>
-                <div class="carta-2__numero">03</div>
-                <img src="img/img__carta-2/imagen5.png">
-            </div>
-        </div>
-    </section>
-
-<!------------------ CARTA 3 ----------------------->
-
-    <section class="carta-3">
-        <div>
-            <h2>Just that simple</h2>
-            <div class="carta-3__parte">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ex suscipit dignissimos eveniet. Ut ex suscipit dignissimos.</p>
-                <button>Get started</button>
-            </div>
-        </div>
-        <img src="img/img__carta-3/imagen1.png">
-    </section>
-
-<!------------------ CARTA 4 ----------------------->
-
-    <section class="carta-4">
-        <img src="img/img__carta-4/imagen1.png">
-        <div>
-            <div class="carta-4__primera-parte">
-                <h2>Exploration and inspiration</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
-                <button>Explore</button>
-            </div>
-            <div class="carta-4__segunda-parte">
-                <div>
-                    <div>01</div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis voluptate, quas qui maxime.</p>
-                </div>
-                <div>
-                    <div>02</div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis voluptate, quas qui maxime.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-<!------------------ CARTA 5 ----------------------->
-
-    <section class="carta-5">
-        <h2>Projects and practice</h2>
-        <div>
-            <div>
-                <div>01</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
-                <img src="img/img__carta-5/imagen1.png">
-            </div>
-            <div>
-                <div>02</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
-                <img src="img/img__carta-5/imagen2.png">
-            </div>
-            <div>
-                <div>03</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget.</p>
-                <img src="img/img__carta-5/imagen3.png">
-            </div>
-        </div>
-    </section>
-
-<!------------------ CARTA 6 ----------------------->
-
-    <section class="carta-6">
-        <div>
-            <div class="circle">
-                <span>,</span>
-                <span>t</span>
-                <span>e</span>
-                <span>m</span>
-                <span>a</span>
-                <span> </span>
-                <span>t</span>
-                <span>i</span>
-                <span>s</span>
-                <span> </span>
-                <span>r</span>
-                <span>o</span>
-                <span>l</span>
-                <span>o</span>
-                <span>d</span>
-                <span> </span>
-                <span>n</span>
-                <span>d</span>
-                <span>r</span>
-                <span>m</span>
-                <span>e</span>
-                <span>r</span>
-                <span>o</span>
-                <span>l</span>
-                <span>s</span>
-                <span>n</span>
-                <span>o</span>
-                <span>c</span>
-                <span> </span>
-            </div>              
-            <div>
-                <h2>THE eWatch with the newest microchip technology</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</p>
-                <div>
-                    <button>Order now</button>
-                    <button>Explore more</button>
-                </div>
-            </div>
-            <div>
-
-            </div>
+            <a href="prototipos/prototipo_1/index.html"><img src="img/imagen01.png" alt="prototipo 1"></a>
+            <p>Prototipo 1</p>
         </div>
         <div>
-
+            <a href="prototipos/prototipo_2/index.html"><img src="img/imagen02.png" alt="prototipo 2"></a>
+            <p>Prototipo 2</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_3/index.html"><img src="img/imagen03.png" alt="prototipo 3"></a>
+            <p>Prototipo 3</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_4/index.html"><img src="img/imagen04.png" alt="prototipo 4"></a>
+            <p>Prototipo 4</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_5/index.html"><img src="img/imagen05.png" alt="prototipo 5"></a>
+            <p>Prototipo 5</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_6/index.html"><img src="img/imagen06.png" alt="prototipo 6"></a>
+            <p>Prototipo 6</p>
+        </div>
+        <div>
+            <a href=""><img src="img/imagen07.png" alt="prototipo 7"></a>
+            <p>Prototipo 7</p>
+        </div>
+        <div>
+            <a href=""><img src="img/imagen08.png" alt="prototipo 8"></a>
+            <p>Prototipo 8</p>
+        </div>
+        <div>
+            <a href=""><img src="img/imagen09.png" alt="prototipo 9"></a>
+            <p>Prototipo 9</p>
+        </div>
+        <div>
+            <a href=""><img src="img/imagen10.png" alt="prototipo 10"></a>
+            <p>Prototipo 10</p>
         </div>
     </section>
-
+    <footer>
+        <p>© 2025 - Projecte</p>
+    </footer>
 </body>
 </html>
