--- a/prototipos/prototipo_6/index.html
+++ b/prototipos/prototipo_6/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototipo 6</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="carta-6">
@@ -12,27 +13,27 @@
             <div class="carta-6__primera-parte">
                 <img src="img__carta-6/imagen1.png" alt="redonda">
                 <h2>THE eWatch with the newest microchip technology</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium molestias consequuntur dolores voluptatibus sit enim! Amet optio obcaecati vel aliquid beatae hic eum libero aperiam consectetur, illum reprehenderit nisi praesentium.</p>
-                <div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium molestias consequuntur dolores voluptatibus sit enim! Amet optio obcaecati vel.</p>
+                <div class="botones">
                     <button>Order now</button>
                     <button>Explore more</button>
                 </div>
             </div>
             <div class="carta-6__segunda-parte">
                 <div>
-                    <span></span>
+                    <img src="img__carta-6/icono1.png" alt="icono1">
                     <p>Lorem ipsum dolor sit.</p>
                 </div>
                 <div>
-                    <span></span>
+                    <img src="img__carta-6/icono2.png" alt="icono2">
                     <p>Lorem ipsum dolor sit.</p>
                 </div>
                 <div>
-                    <span></span>
+                    <img src="img__carta-6/icono3.png" alt="icono3">
                     <p>Lorem ipsum dolor sit.</p>
                 </div>
                 <div>
-                    <span></span>
+                    <img src="img__carta-6/icono4.png" alt="icono4">
                     <p>Lorem ipsum dolor sit.</p>
                 </div>
             </div>
