--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>Prototipo 6</p>
         </div>
         <div>
-            <a href=""><img src="img/imagen07.png" alt="prototipo 7"></a>
+            <a href="prototipos/prototipo_7/index.html"><img src="img/imagen07.png" alt="prototipo 7"></a>
             <p>Prototipo 7</p>
         </div>
         <div>
