--- a/prototipos/prototipo_6/index.html
+++ b/prototipos/prototipo_6/index.html
@@ -40,6 +40,11 @@
         </div>
         <div class="carta-6__lado-derecho">
             <img src="img__carta-6/imagen2.jpg">
+            <img src="img__carta-6/imagen3.png" alt="estreya">
+            <img src="img__carta-6/imagen4.png" alt="estreya2">
+            <img src="img__carta-6/imagen4.png" alt="estreya3">
+            <button class="boton_lila boton_lila--uno">Ergonomic design</button>
+            <button class="boton_lila boton_lila--dos">Award winning product</button>
         </div>
     </section>
 </body>
