--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Prototipo 7</p>
         </div>
         <div>
-            <a href=""><img src="img/imagen08.png" alt="prototipo 8"></a>
+            <a href="prototipos/prototipo_8/index.html"><img src="img/imagen08.png" alt="prototipo 8"></a>
             <p>Prototipo 8</p>
         </div>
         <div>
