--- a/prototipos/prototipo_10/index.html
+++ b/prototipos/prototipo_10/index.html
@@ -17,19 +17,28 @@
         </div>
         <div class="lado_derecho">
             <div>
-                <img src="" alt="imagen1">
-                <img src="" alt="imagen2">
-                <img src="" alt="imagen3">
-                <img src="" alt="imagen4">
+                <img src="img__carta-10/imagen01.jpeg" alt="imagen1">
+                <img src="img__carta-10/imagen02.jpeg" alt="imagen2">
+                <img src="img__carta-10/imagen03.jpeg" alt="imagen3">
+                <img src="img__carta-10/imagen04.jpeg" alt="imagen4">
             </div>
             <div>
-
+                <img src="img__carta-10/imagen05.jpeg" alt="imagen5">
+                <img src="img__carta-10/imagen06.jpeg" alt="imagen6">
+                <img src="img__carta-10/imagen07.jpeg" alt="imagen7">
+                <img src="img__carta-10/imagen08.jpeg" alt="imagen8">
             </div>
             <div>
-
+                <img src="img__carta-10/imagen09.jpeg" alt="imagen9">
+                <img src="img__carta-10/imagen10.jpeg" alt="imagen10">
+                <img src="img__carta-10/imagen11.jpeg" alt="imagen11">
+                <img src="img__carta-10/imagen12.jpeg" alt="imagen12">
             </div>
             <div>
-
+                <img src="img__carta-10/imagen13.jpeg" alt="imagen13">
+                <img src="img__carta-10/imagen14.jpeg" alt="imagen14">
+                <img src="img__carta-10/imagen15.jpeg" alt="imagen15">
+                <img src="img__carta-10/imagen16.jpeg" alt="imagen16">
             </div>
         </div>
     </section>
