--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
             <a href="prototipos/prototipo_10/index.html"><img src="img/imagen10.png" alt="prototipo 10"></a>
             <p>Prototipo 10</p>
         </div>
+        <div>
+            <a href="prototipos/prototipo_11/index.html"><img src="img/imagen11.png" alt="prototipo 11"></a>
+            <p>Prototipo 11</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_12/index.html"><img src="img/imagen12.png" alt="prototipo 12"></a>
+            <p>Prototipo 12</p>
+        </div>
     </section>
     <footer>
         <p>© 2025 - Projecte</p>
