--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
             <a href="prototipos/prototipo_12/index.html"><img src="img/imagen12.png" alt="prototipo 12"></a>
             <p>Prototipo 12</p>
         </div>
+        <div>
+            <a href="prototipos/prototipo_13/index.html"><img src="img/imagen13.png" alt="prototipo 13"></a>
+            <p>Prototipo 13</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_14/index.html"><img src="img/imagen14.png" alt="prototipo 14"></a>
+            <p>Prototipo 14</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_15/index.html"><img src="img/imagen15.png" alt="prototipo 15"></a>
+            <p>Prototipo 15</p>
+        </div>
     </section>
     <footer>
         <p>© 2025 - Projecte</p>
