--- a/prototipos/prototipo_13/index.html
+++ b/prototipos/prototipo_13/index.html
@@ -4,34 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototipo 13</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section class="carta-13">
-        <div>
-            <div>
-                <div>01</div>
+        <div class="lado-izquierdo">
+            <div class="contenido primer-contenido">
+                <div class="numero">01</div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus.</p>
             </div>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
+            <div class="estreyas">
+                <img src="img_carta-13/estreya2.png" alt="estreya2">
+                <img src="img_carta-13/estreya1.png" alt="estreya">
             </div>
-            <img src="" alt="imagen1">
+            <img src="img_carta-13/imagen1.jpg" alt="imagen1">
         </div>
-        <div>
-            <h2></h2>
-            <p></p>
-            <button></button>
+        <div class="lado-centro">
+            <h2>Create your design</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget.</p>
+            <button>Explore</button>
         </div>
-        <div>
-            <img src="" alt="imagen2">
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
+        <div class="lado-derecho">
+            <img src="img_carta-13/imagen2.jpg" alt="imagen2">
+            <div class="estreyas">
+                <img src="img_carta-13/estreya1.png" alt="estreya">
+                <img src="img_carta-13/estreya3.png" alt="estreya3">
             </div>
-            <div>
-                <div>02</div>
-                <p></p>
+            <div class="contenido segundo-contenido">
+                <div class="numero">02</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus.</p>
             </div>
         </div>
     </section>
