--- a/prototipos/prototipo_13/index.html
+++ b/prototipos/prototipo_13/index.html
@@ -26,8 +26,8 @@
         </div>
         <div class="lado-derecho">
             <img src="img_carta-13/imagen2.jpg" alt="imagen2">
-            <div class="estreyas">
-                <img src="img_carta-13/estreya1.png" alt="estreya">
+            <div class="estreyas segunda-estreya">
+                <img src="img_carta-13/estreya1.png" alt="estreya1">
                 <img src="img_carta-13/estreya3.png" alt="estreya3">
             </div>
             <div class="contenido segundo-contenido">
