--- a/prototipos/prototipo_13/index.html
+++ b/prototipos/prototipo_13/index.html
@@ -20,9 +20,13 @@
             <img src="img_carta-13/imagen1.jpg" alt="imagen1">
         </div>
         <div class="lado-centro">
-            <h2>Create your design</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget.</p>
-            <button>Explore</button>
+            <div class="contenido-centro">
+                <h2>Create your design</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget.</p>
+                <button>Explore</button>
+            </div>
+            <img src="img_carta-13/gradientes.png" alt="gradientes">
+        </div>
         </div>
         <div class="lado-derecho">
             <img src="img_carta-13/imagen2.jpg" alt="imagen2">
