--- a/prototipos/prototipo_14/index.html
+++ b/prototipos/prototipo_14/index.html
@@ -20,12 +20,12 @@
                     <div class="raya"></div>
                     <p>Lorem ipsum dolor amet</p>
                 </div>
-                <div lass="trozo-secion">
+                <div class="trozo-secion">
                     <div class="numero">876K</div>
                     <div class="raya"></div>
                     <p>Lorem ipsum dolor amet</p>
                 </div>
-                <div lass="trozo-secion">
+                <div class="trozo-secion">
                     <div class="numero">No.1</div>
                     <div class="raya"></div>
                     <p>Lorem ipsum dolor amet</p>
