--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
             <a href="prototipos/prototipo_15/index.html"><img src="img/imagen15.png" alt="prototipo 15"></a>
             <p>Prototipo 15</p>
         </div>
+        <div>
+            <a href="prototipos/prototipo_16/index.html"><img src="img/imagen16.png" alt="prototipo 16"></a>
+            <p>Prototipo 16</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_17/index.html"><img src="img/imagen17.png" alt="prototipo 17"></a>
+            <p>Prototipo 17</p>
+        </div>
+        <div>
+            <a href="prototipos/prototipo_18/index.html"><img src="img/imagen18.png" alt="prototipo 18"></a>
+            <p>Prototipo 18</p>
+        </div>
     </section>
     <footer>
         <p>© 2025 - Projecte</p>
